Match correct and incorrect feedback rectangle padding on mobile

--- a/src/app/components/question/answer/feedback/feedback.component.scss
+++ b/src/app/components/question/answer/feedback/feedback.component.scss
@@ -132,9 +132,6 @@
     .feedback-message.correct-message,
     .feedback-message.wrong-message {
       margin: -5px 0 !important;
-    }
-
-    .feedback-message.wrong-message {
       padding: 8px 15px 8px 10px !important;
     }
 
